tests/purs/failing/ClassHeadNoVTA6.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA6.purs:8:9 - 8:17 (line 8, column 9 - line 8, column 17)

  No type class instance was found for
  [33m               [0m
  [33m  Main.Multi t0[0m
  [33m             t1[0m
  [33m             t2[0m
  [33m             t3[0m
  [33m             t4[0m
  [33m             t5[0m
  [33m               [0m
  The instance head contains unknown type variables.

  Note: The following type class members found in the expression require specifying their corresponding type class' type variables by using Visible Type Applications (e.g. [33mtyClassMember @Int[0m).
    [33mMain.useMulti[0m
      b, c, e

while checking that type [33mforall (t52 :: Type) (t53 :: Type) (t54 :: Type) (t55 :: Type) (t56 :: Type) (t57 :: Type) (@a :: t52) (@b :: t53) (@c :: t54) (@d :: t55) (@e :: t56) (@f :: t57). Multi @t52 @t53 @t54 @t55 @t56 @t57 a b c d e f => Int[0m
  is at least as general as type [33mInt[0m
while checking that expression [33museMulti[0m
  has type [33mInt[0m
in value declaration [33mmulti[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type
      [33mt3[0m is an unknown type
      [33mt4[0m is an unknown type
      [33mt5[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

